<resources>
    <string name="default_notification_channel_id">Muselink</string>
    <string name="facebook_app_id">762883647949899</string>
    <string name="fb_login_protocol_scheme">fb762883647949899</string>
    <string name="internal_storage">internalstorage</string>
    <string name="APP_KEY">o9xgaqule1za9hg</string>
    <string name="app_name">Muselink</string>
    <string name="facebook_client_token">61752ad9c32b300be90269ab551bec70</string>
    <string name="music_is_silent_until_right_people_nhear_it">Music is silent until right people discover it.</string>
    <string name="match">Match</string>
    <string name="collaborate">Collaborate</string>
    <string name="discover_sound_files">Discover anonymous sound files and user profiles</string>
    <string name="direct_cross"><![CDATA[Direct & cross match]]></string>
    <string name="share_with_world">Share with the world</string>
    <string name="next">Next</string>
    <string name="match_sonically_or_based_upon_personal_interests">Match sonically or based upon\npersonal interests</string>
    <string name="muselink">- Muselink</string>
    <string name="start">START</string>
    <string name="discover">Discover</string>
    <string name="sound_files">Sound files</string>
    <string name="user_profiles">User profiles</string>
    <string name="signup">Sign Up</string>
    <string name="mail_signup">Sign up with Phone/Email</string>
    <string name="mail_login">Log in with Phone/Email</string>
    <string name="tiktok_signup">Sign up with TikTok</string>
    <string name="tiktok_login">Log in with TikTok</string>
    <string name="facebook_signup">Sign up with Facebook</string>
    <string name="facebook_login">Log in with Facebook</string>
    <string name="Instagram_signup">Sign up with Instagram</string>
    <string name="Instagram_login">Log in with Instagram</string>
    <string name="soundcloud_signup">Sign up with Dropbox</string>
    <string name="soundcloud_login">Log in with Dropbox</string>
    <string name="appleid_signup">Sign up with Apple id</string>
    <string name="appleid_login">Log in with Apple id</string>
    <string name="login">Log In</string>
    <string name="alreadyacc"><u>Already have an account?</u></string>
    <string name="termsof_use">By continuing,You agree to Muselink Terms of Use and Confirm that you have read Muselink Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="signup_detail">Create a Profile,upload sound files,match and collaborate with users + more...</string>
    <string name="sound_file_pro">Sound file PRO</string>
    <string name="soundfile">Sound files</string>
    <string name="soundfiles"><u>Soundfiles</u></string>
    <string name="aboutme">About Me</string>
    <string name="description">Description</string>
    <string name="Phonesignup_detail">Please Verify your Phone number.\n We will end you 4-digit code on your registered  mobile number.</string>
    <string name="phone_verification">Your Phone number Verification has been done Successfully.</string>
    <string name="phone">Phone</string>
    <string name="success">Success!</string>
    <string name="phone_no">Phone Number</string>
    <string name="pswd">Password</string>
    <string name="dummy_email">abc@gmail.com</string>
    <string name="send_code">Send Code</string>
    <string name="continue_click">Continue</string>
    <string name="email">Email</string>
    <string name="viewalll"><u>View All</u></string>
    <string name="phone_verify">Phone Verification</string>
    <string name="dont_recieve">Did\'nt you Recieved any code?</string>
    <string name="resend_code"><u> Resend Code</u></string>
    <string name="verify_code">Verify Code</string>
    <string name="detail_otp">Enter your one time password send to your mobile number</string>
    <string name="add_comment">Add a comment...</string>
    <string name="user_name">Jack Hardy</string>
    <string name="american_idt">American Idiot</string>
    <string name="green_day">Green Day</string>
    <string name="good_job">Very Good Job</string>
    <string name="dummytext">it works perfectly thanks! You help me a lot! But why in this case you change RelativeLayout with LinearLayout? Wasn\'t the set margins related to the relativeLayout in my starter code? </string>
    <string name="project_roles">Project Roles</string>
    <string name="instrumentalist">Instrumentalist</string>
    <string name="producer">Producer</string>
    <string name="vocalist">Vocalist</string>
    <string name="top_liner">Top Liner</string>
    <string name="song_writer">Song Writer</string>
    <string name="view_all">View all</string>
    <string name="project_goals">Project Goals</string>
    <string name="finish_my_album">Finish my album</string>
    <string name="find_a_songwriter">Find a songwriter</string>
    <string name="finish_this_demo">Finish this demo</string>
    <string name="finish_a_topliner">Finish a topliner</string>
    <string name="finish_a_vocalist">Fnish a vocalist</string>
    <string name="notifications">Notifications</string>
    <string name="unread_messages">Messages</string>
    <string name="online">Online</string>
    <string name="you_have_a_unread_message_from_warner_music_norway">You have a unread message from</string>
    <string name="offline">Offline</string>
    <string name="recent_active">Recent Active</string>
    <string name="type_message">Type Message...</string>
    <string name="prsnl_intrst">Personal Interests</string>
    <string name="edit">Edit</string>
    <string name="slct_edtintrst">(1/5 selected)</string>
    <string name="hiphop">HipHop</string>
    <string name="fashion">Fashion </string>
    <string name="txt_here">Type here.... </string>
    <string name="ok">ok</string>
    <string name="mixing">Mixing</string>
    <string name="vegetarrian">Vegetarianen</string>
    <string name="marketing">Marketing</string>
    <string name="pop_culture">Pop Culture</string>
    <string name="crrer_goals">Carrer Goals</string>
    <string name="biography">Biography</string>
    <string name="edt_intrst">Edit Interest</string>
    <string name="edt_goals">Edit Goals</string>
    <string name="edt_biography">Edit Biography</string>
    <string name="fnsh_album">Finish my Album</string>
    <string name="goals">Goals</string>
    <string name="grow_follow">Grow my following</string>
    <string name="itensive">Intensiverelising</string>
    <string name="bio_set">Hey, so my name is Bruno Mars and i\'m a musician from Chicago.I enjoy playing the clarinent and meditating during my free time.I am also a vegan chef on the weekends!</string>
    <string name="upload_a_soundfile">Upload a Soundfile</string>
    <string name="camera">Camera</string>
    <string name="record">Record</string>
    <string name="soundcloud">Soundcloud</string>
    <string name="dropbox">Dropbox</string>
    <string name="library">Library</string>
    <string name="navigate">Navigate</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="push_notif">Push Notification</string>
    <string name="support">Support</string>
    <string name="invt_frnd">Invite a Friend</string>
    <string name="term_use">Term of Use</string>
    <string name="privacy_policys">Privacy Policy</string>
    <string name="abt_us">About us</string>
    <string name="cntct_us">Contact us</string>
    <string name="rate_us">Rate us</string>
    <string name="clr_cache">Clear cache</string>
    <string name="dlt_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="personal_interests">Personal Interests</string>
    <string name="username">Username</string>
    <string name="manage_my_account">Manage My Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="hide_show">Hide/Show</string>
    <string name="show_my_account_in_explorer">Show my account in explorer</string>
    <string name="allow_other_users_to_share_your_sound_files">Allow other users to share your sound files</string>
    <string name="no_yes">No/Yes</string>
    <string name="who_can_send_you_direct_message">Who can send you direct message</string>
    <string name="blocked_accounts">Blocked accounts</string>
    <string name="list_of_blocked_account">List of blocked account</string>
    <string name="share_profile_account">Share profile account</string>
    <string name="share_account">Share Account</string>
    <string name="everyone">Everyone</string>
    <string name="premium_users">Premium users</string>
    <string name="users_that_i_ve_previously_nmatched_with">Users that I\'ve previously\nmatched with</string>
    <string name="unblock">Unblock</string>
    <string name="new_admirer">New admirer</string>
    <string name="turn_off_on">Turn Off/On</string>
    <string name="new_match">New Match</string>
    <string name="new_massage">New Message</string>
    <string name="when_a_user_that_you_have_matched_with_uploads_a_new_file">When a user that you have matched with uploads a new file</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="submit_an_idea">Submit an idea</string>
    <string name="explain_the_issue">Explain the issue</string>
    <string name="write_issue">Write issue...</string>
    <string name="upload_a_file">Upload a File</string>
    <string name="we_love_creative_initiatives_submit_your_ideas_for_a_review">We love creative initiatives, submit your ideas for a review.</string>
    <string name="submit">Submit</string>
    <string name="write_review">Write review...</string>
    <string name="shoot">Shoot</string>
    <string name="select_5_15_seconds">Select 5-15 Seconds</string>
    <string name="highlight_5_15_seconds">Highlight 5-15 Seconds</string>
    <string name="label_a_r"><![CDATA[Label/ A&R]]></string>
    <string name="more">More</string>
    <string name="highlight_5_15_seconds_of_the_sound_file">Highlight 5-15 seconds of\nthe sound file.</string>
    <string name="select_your_role">Select your Role(s)</string>
    <string name="select_at_least_1_out_of_9_roles_that_describe_your_contribution_for_this_sound_file">Select at least 1 out of 9 roles that describe your contribution for this sound file.</string>
    <string name="what_goals_do_you_have_for_this_sound_file">What goals do you have\nfor this sound file?</string>
    <string name="project_description">Project Description</string>
    <string name="describe_the_sound_file_you_can_use_hastag_and_location">Describe the sound file you can use #hastag and @location</string>
    <string name="upload">Upload</string>
    <string name="select_your_goals">Select your Goal(s)</string>
    <string name="mix_the_song">Mix the song</string>
    <string name="write_description_here">Write Description here…</string>
    <string name="write_message_here">Write message here…</string>
    <string name="background_color">Background Color</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="remove_match">Remove Match</string>
    <string name="close">Close</string>
    <string name="edit_interets">Edit Interests</string>
    <string name="OK">OK</string>
    <string name="interest">Interest</string>
    <string name="thank_you_for_the_support">Thank you for the support</string>
    <string name="unlimited_likes">Unlimited Likes</string>
    <string name="unlimited_swipes">Unlimited Swipes</string>
    <string name="unlimited_rewinds">Unlimited Rewinds</string>
    <string name="five_daily_direct_messages">5 daily Direct Messages</string>
    <string name="biography_pro">Biography PRO</string>
    <string name="access_the_search_library">Access the search library</string>
    <string name="double_upload_limit">Double upload limit</string>
    <string name="hear_full_sound_file">Hear full sound file</string>
</resources>