<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llGoal1"
            android:gravity="center"
            android:background="@drawable/selector_project"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp">

            <TextView
                android:id="@+id/tvGoal1"
                android:textColor="@drawable/selector_project_text"
                android:fontFamily="@font/avenir_next_demi"
                android:textSize="@dimen/_13ssp"
                android:text="@string/finish_my_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGoal2"
            android:gravity="center"
            android:background="@drawable/selector_project"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:textColor="@drawable/selector_project_text"
                android:id="@+id/tvGoal2"
                android:fontFamily="@font/avenir_next_demi"
                android:textSize="@dimen/_13ssp"
                android:text="@string/find_a_songwriter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llGoal3"
            android:gravity="center"
            android:background="@drawable/selector_project"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp">

            <TextView
                android:id="@+id/tvGoal3"
                android:textColor="@drawable/selector_project_text"
                android:fontFamily="@font/avenir_next_demi"
                android:textSize="@dimen/_13ssp"
                android:text="@string/finish_this_demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGoal4"
            android:gravity="center"
            android:background="@drawable/selector_project"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvGoal4"
                android:textColor="@drawable/selector_project_text"
                android:fontFamily="@font/avenir_next_demi"
                android:textSize="@dimen/_13ssp"
                android:text="@string/finish_a_topliner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llGoal5"
            android:gravity="center"
            android:background="@drawable/selector_project"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp">

            <TextView
                android:id="@+id/tvGoal5"
                android:textColor="@drawable/selector_project_text"
                android:fontFamily="@font/avenir_next_demi"
                android:textSize="@dimen/_13ssp"
                android:text="@string/finish_a_vocalist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGoal6"
            android:gravity="center"
            android:background="@drawable/selector_project"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvGoal6"
                android:textColor="@drawable/selector_project_text"
                android:fontFamily="@font/avenir_next_demi"
                android:textSize="@dimen/_13ssp"
                android:text="@string/view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>